--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,31 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <!-- 主内容视图一定要是DrawerLayout的第一个子视图【必须】 -->
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
 
-        <com.astuetz.PagerSlidingTabStrip
-            android:id="@+id/ps_tab"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            app:pstsDividerColor="@color/colorPrimary"
-            app:pstsIndicatorColor="@color/colorPrimary" />
-        <android.support.v4.view.ViewPager
-            android:id="@+id/vp_news"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+        <!-- 引入导航栏 -->
+        <include
+            android:id="@+id/main_navbar"
+            layout="@layout/navigationbar_main" />
 
-    </android.widget.LinearLayout>
+        <android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context=".MainActivity"
+            android:orientation="vertical">
+            <com.astuetz.PagerSlidingTabStrip
+                android:id="@+id/ps_tab"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                app:pstsDividerColor="@color/colorPrimary"
+                app:pstsIndicatorColor="@color/colorPrimary" />
+            <android.support.v4.view.ViewPager
+                android:id="@+id/vp_news"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+        </android.widget.LinearLayout>
+
+    </LinearLayout>
+    <!-- 左侧区域侧边栏【可选】【如果想要只有一个右侧的侧边栏，那么就只需要留一个即可,注意的是left需要换成right】 --><!-- android:tag="LEFT"用于java代码中通过drawerView.getTag()判断左侧还是右侧 -->
+    <fragment
+        android:id="@+id/fragment_leftmenu"
+        android:name="com.example.xinwen.MainMenuLeftFragment"
+        android:layout_width="300dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="left"
+        android:tag="LEFT" />
+
+
+
 </android.support.v4.widget.DrawerLayout>
+
+
+
 
 
